test/domains/sungeun/rect/translate_illegal.good
translate_illegal.chpl:6: error: offsets must be of integral type
